--- a/20_Weather_Project/install.txt
+++ b/20_Weather_Project/install.txt
@@ -15,3 +15,5 @@ https://openweathermap.org/current
 api.openweathermap.org/data/2.5/weather?q={city name}&appid={API key}
 
 http://api.openweathermap.org/data/2.5/weather?q=toronto&units=metric&appid=d2893f0cdfb00aa69eb343a3c0f11c24
+
+npm install body-parser
