--- a/22_Embedded_JavaScript_templates/Todolist_v1_project/install.txt
+++ b/22_Embedded_JavaScript_templates/Todolist_v1_project/install.txt
@@ -16,3 +16,6 @@ app.set('view engine', 'ejs');
 app.get('/', (req, res) => {
   res.render('index', {foo: 'FOO'});
 });
+
+
+app.use(express.static('public'))
