--- a/32_Authentication_Security/install.txt
+++ b/32_Authentication_Security/install.txt
@@ -9,11 +9,15 @@ npm install dotenv
 npm install md5
 npm install bcrypt
 
-
 npm i passport
 npm install passport-local
 npm i passport-local-mongoose
 npm i express-session
+
+npm install passport-google-oauth
+
+npm install mongoose-findorcreate
+
 
 npm install -g nodemon
 
@@ -31,5 +35,30 @@ http://www.passportjs.org/packages/passport-local/
 
 https://www.npmjs.com/package/passport-local-mongoose
 
+https://www.npmjs.com/package/mongoose-findorcreate
+
 {useNewUrlParser: true, useUnifiedTopology: true}
 
+mongoose.set('useCreateIndex', true);
+
+https://github.com/jaredhanson/passport-google-oauth2
+
+npm uninstall passport-google-oauth20
+
+var GoogleStrategy = require('passport-google-oauth20').Strategy;
+
+passport.use(new GoogleStrategy({
+    clientID: GOOGLE_CLIENT_ID,
+    clientSecret: GOOGLE_CLIENT_SECRET,
+    callbackURL: "http://www.example.com/auth/google/callback"
+  },
+  function(accessToken, refreshToken, profile, cb) {
+    User.findOrCreate({ googleId: profile.id }, function (err, user) {
+      return cb(err, user);
+    });
+  }
+));
+
+
+ userProfileURL: "https://www.googleapis.com/oauth2/v3 userinfo"
+ 
